Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
       <h1>
 <a id="panandzoom" class="anchor" href="#panandzoom" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PanAndZoom</h1>
 
-<p><a href="https://gitter.im/wieslawsoltes/MatrixPanAndZoomDemo?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/wieslawsoltes/MatrixPanAndZoomDemo.svg" alt="Gitter"></a>
-<a href="https://ci.appveyor.com/project/wieslawsoltes/matrixpanandzoomdemo/branch/master"><img src="https://ci.appveyor.com/api/projects/status/2l6o2ondbbn6mmwh/branch/master?svg=true" alt="Build status"></a>
+<p><a href="https://gitter.im/wieslawsoltes/MatrixPanAndZoomDemo?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/wieslawsoltes/MatrixPanAndZoomDemo.svg" alt="Gitter"></a></p>
+
+<p><a href="https://ci.appveyor.com/project/wieslawsoltes/matrixpanandzoomdemo/branch/master"><img src="https://ci.appveyor.com/api/projects/status/2l6o2ondbbn6mmwh/branch/master?svg=true" alt="Build status"></a>
 <a href="https://travis-ci.org/wieslawsoltes/MatrixPanAndZoomDemo"><img src="https://travis-ci.org/wieslawsoltes/MatrixPanAndZoomDemo.svg?branch=master" alt="Build Status"></a></p>
+
+<p><a href="https://www.nuget.org/packages/Avalonia.Controls.PanAndZoom"><img src="https://img.shields.io/nuget/v/Avalonia.Controls.PanAndZoom.svg" alt="NuGet"></a>
+<a href="https://www.myget.org/gallery/panandzoom-nightly"><img src="https://img.shields.io/myget/panandzoom-nightly/vpre/Avalonia.Controls.PanAndZoom.svg?label=myget" alt="MyGet"></a> </p>
 
 <p>PanAndZoom control for WPF and Avalonia</p>
 
@@ -35,7 +39,7 @@
 
 <p>PanAndZoom is delivered as a NuGet package.</p>
 
-<p>You can find the packages here <a href="https://www.nuget.org/packages/PanAndZoom/">NuGet</a> or by using nightly build feed:</p>
+<p>You can find the packages here <a href="https://www.nuget.org/packages/Avalonia.Controls.PanAndZoom/">NuGet for Avalonia</a> and here <a href="https://www.nuget.org/packages/Wpf.Controls.PanAndZoom/">NuGet for WPF</a> or by using nightly build feed:</p>
 
 <ul>
 <li>Add <code>https://www.myget.org/F/panandzoom-nightly/api/v2</code> to your package sources</li>
@@ -69,7 +73,7 @@
 <a id="package-sources" class="anchor" href="#package-sources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Package Sources</h3>
 
 <ul>
-<li><a href="https://www.nuget.org/api/v2/">https://www.nuget.org/api/v2/</a></li>
+<li><a href="https://api.nuget.org/v3/index.json">https://api.nuget.org/v3/index.json</a></li>
 <li><a href="https://www.myget.org/F/panandzoom-nightly/api/v2">https://www.myget.org/F/panandzoom-nightly/api/v2</a></li>
 </ul>
 
